# libowski

./: .gitignore  CMakeLists.txt  README.md  test.inp
.github/workflows/: ccpp.yml
caseStudies/: CMakeLists.txt  caseStudie.cpp  caseStudies.cpp
data/: 150PercentNominalEigenValues.txt  150PercentNominalEigenValuesDirichlet.txt  1procs.out  2procs.out  3procs.out  4procs.out  50PercentNominalEigenValues.txt  50PercentNominalEigenValuesDirichlet.txt  5procs.out  6procs.out  7procs.out  8procs.out  nominalEigenvalues.txt  nominalEigenvaluesDirichlet.txt  precursors.out
data/oldplots/: 2procs.out  4procs.out  5procs.out  6procs.out  7procs.out  8procs.out
data/precursorImages/: create_gif.py
include/: ODEintegrator.h  cellConnection.h  convectionLimiter.h  matrixExponential.h  meshCell.h  meshCellFace.h  modelMesh.h  mpiProcess.h  parser.h  scalarData.h  species.h  speciesDriver.h  surface.h
include/sourceTerms/: gasSparging.h  generic.h  genericRemoval.h  neutronInducedReactions.h  physicsModelABC.h  physicsModelFactory.h  physicsModels.h  wallDeposition.h
lib/utils/: CMakeLists.txt  assertions.cpp  assertions.h  benBenchmark.py  constants.h  exception.cpp  exception.h  internalTypeDefs.h  linearAlgebra.cpp  linearAlgebra.h  matrixTypes.h  performancePlot.py  precursorMultiChanPlot.py  precursorPlot.py  sys.cpp  sys.h  utilBase.cpp  utilBase.h  vectorTypes.h
lib/utils/include/: conversions.h  exception.h  linearAlgebra.h  utilBase.h  vectorTypes.h
lib/utils/plotting/: create_gif.py  matrix.py  performancePlot.py  plotEivenValues.py  precursorMultiChanPlot.py  precursorPlot.py
lib/utils/src/: exception.cpp  linearAlgebra.cpp  sys.cpp  utilBase.cpp
pyLibowski/: CRAM.py  compareMatrices.py  main.py  utils.py
src/: CMakeLists.txt  CRAM.cpp  CRAM.h  MeshCellDataType.h  ModelMeshType.cpp  ModelMeshType.h  ODEintegrator.cpp  ODEintegrator.h  cellConnection.cpp  cellConnection.h  convectionLimiter.cpp  convectionLimiter.h  coreMatExpSolver.cpp  coreSolver.cpp  coreSolver.h  libowski.cpp  main.cpp  matrixExponential.cpp  matrixExponential.h  meshCell.cpp  meshCell.h  meshCellData.cpp  meshCellData.h  meshCellFace.cpp  meshCellFace.h  modelMesh.cpp  modelMesh.h  mpiProcess.cpp  mpiProcess.h  numericalIntegrator.cpp  numericalIntegrator.h  parser.cpp  scalarData.cpp  scalarData.h  species.cpp  species.h  speciesDriver.cpp  speciesDriver.h  surface.cpp  surface.h
src/data/: NeutronPrecursorSolution.csv  caseStudy2Solution.csv  moleP10Solution.csv  moleP12Solution.csv  speciesInputDecaySmall.txt  speciesInputNamesSmall.txt  speciesInputTransSmall.txt  theta.txt
src/data/caseStudy/: caseStudy1Solution.csv  caseStudyNeutronprecursorsSolution.csv
src/data/caseStudy/2DMSRTranpsort/: solutionMSR2DDepletionSmall3x9.csv
src/data/caseStudy/2DMSRTransport/: solutionMSR2DDepletionMedium3x9.csv
src/data/caseStudy/msrLumpDepletion/: solutionMSRLumpDepletionMedium.csv  solutionMSRLumpDepletionSmall.csv  solutionMSRMediumLumpDepletion.csv  solutionMSRSmallLumpDepletion.csv
src/data/caseStudy/neutronPrecursors/dt1/: solutionVel100.csv  solutionVel25.csv  solutionVel50.csv
src/data/caseStudy/neutronPrecursors/dt10/: solutionVel100.csv  solutionVel50.csv
src/data/caseStudy/neutronPrecursors/dt60/: solutionVel100.csv  solutionVel25.csv  solutionVel50.csv
src/data/mole/: moleP12Solution.csv
src/data/msr/: gasIntAreaMap3x9.csv  gasIntAreaMap9x27.csv  msrLumpDepletionSolution.csv  msrMediumLumpDepletionSolution.csv  msrSmall2DDepletionSolution.csv  msrSmallLumpDepletionSolution.csv  neutronFluxMap3x9.csv  neutronFluxMap9x27.csv  solutionMSR2DDepletionSmall.csv  solutionMSRDepletionMedium3x9.csv  speciesInputGasSpargingMedium.txt  speciesInputGasSpargingSmall.txt  speciesInputWallDepositionMedium.txt  speciesInputWallDepositionSmall.txt  temperatureMap3x9.csv  temperatureMap9x27.csv  voidMap3x9.csv  voidMap9x27.csv  wallIntAreaMap3x9.csv  wallIntAreaMap9x27.csv
src/data/test/: speciesInputGasSpargingSmall.txt  speciesInputNamesMassTransportSmall.txt  speciesInputNamesSmall.txt  speciesInputWallDepositionSmall.txt
src/massTransferModels/: CMakeLists.txt  massTransfer.h
src/sourceTermPhysicsModels/: CMakeLists.txt  gasSparging.cpp  gasSparging.h  generic.cpp  generic.h  neutronInducedReactions.cpp  neutronInducedReactions.h  physicsModel.cpp  physicsModel.h  physicsModelABC.cpp  physicsModelABC.h  physicsModelFactory.cpp  physicsModelFactory.h  wallDeposition.cpp  wallDeposition.h
src/sourceTerms/: CMakeLists.txt  gasSparging.cpp  generic.cpp  genericRemoval.cpp  neutronInducedReactions.cpp  physicsModelFactory.cpp  wallDeposition.cpp
src/unitTest/: test.cpp
unitTest/: '  CMakeLists.txt  test.cpp  testFluxConvergence.cpp  testIntegratorSolvers.cpp  testMatExpSolver.cpp  testMesh.cpp  testMoleProblems.cpp  testSolver.cpp  testSpatialConvergence.cpp  testUtils.cpp  verificationProblems.cpp
